Tests/a1/reject/14.ul
int main (int x) {
	int x;
	x(x,x, int x);
}